- Refactored package naming structure. - Added Sell Wand feature. - Added Sell Wand custom item support to GUI shop.